test/Fail/Issue5481.err
Issue5481.agda:19.14-19: error: [SplitInProp]
Cannot split on inductive record type
in Prop unless target is in Prop
when checking that the pattern acc p has type Acc a
